fix menu overflow

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ img {
 
 .hero .content h1 {
   font-size: 55px;
+  z-index: 9;
 }
 
 .hero .content p {
