--- a/css/utils.css
+++ b/css/utils.css
@@ -132,7 +132,6 @@
 
 .section-header h2 {
   font-size: 40px;
-  margin: 20px 0;
 }
 
 .section-padding {
